--- a/css/styles.css
+++ b/css/styles.css
@@ -11387,7 +11387,7 @@ p.lead {
   }
 }
 .social-icons .social-icon {
-  display: inline-flex;
+  display: inline-flex!important;
   align-items: center;
   justify-content: center;
   height: 3.5rem;
